@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2025-07-26T01:07:57Z",
+  "timestamp" : "2025-07-29T01:17:45Z",
   "count_outdated" : 556,
   "uniques_outdated" : 382,
-  "count" : 557,
-  "uniques" : 383,
+  "count" : 558,
+  "uniques" : 384,
   "clones" : [
     {
       "timestamp": "2025-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-28T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
